src/test/run-pass/int.rs



// -*- rust -*-
fn main() { let int x = 10; }